# text_wrapper

./: CMakeLists.txt  README.md  config.c  config.h  help.h  main.c
src/: config.c  config.h  help.h  main.c  utils.c  utils.h
